--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "helmet": "^6.0.0",
     "joi": "^17.7.0",
     "method-override": "^3.0.0",
+    "mongodb": "^6.3.0",
     "mongoose": "^5.13.15",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
-    "sanitize-html": "^2.7.3"
+    "sanitize-html": "^2.7.3",
+    "serve-favicon": "^2.5.0"
   }
 }
